refactor: Code cleanup - removes deprecated, unused and commented out code.